# weather-rs

./: Cargo.toml  README.md
src/: main.rs
src/providers/: accuweather.rs  common.rs  mod.rs  openweathermap.rs  weatherapi.rs
src/services/: cli.rs  config.rs  coordinates.rs  mod.rs
