[package]
name = "weather-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.2", features = ["cargo", "derive"] }
text_io = "0.1.12"